--- a/client/callback.html
+++ b/client/callback.html
@@ -9,10 +9,13 @@
      response_mode: 'query'
    });
 
-    manager.signinPopupCallback()
+    manager.signinRedirectCallback()
      .then(function(user) {
-       console.log(user);
-       // do something with the user?
+       //console.log(user);
+       window.history.replaceState({},
+         window.document.title,
+         window.location.origin + window.location.pathname);
+       window.location = "index.html";
      }).catch(function(e) {
        console.error(e);
      });
