--- a/login-spa/index.html
+++ b/login-spa/index.html
@@ -48,8 +48,8 @@
   </script>
 
   <form>
-    <input type="text" name="username" id="username" value="">
-    <input type="password" name="password" id="password" value="">
+    <input type="text" name="username" id="username" autocomplete="username" value="">
+    <input type="password" name="password" id="password" autocomplete="current-password" value="">
     <button type="button" name="button" id="login" onclick="logMeIn()">Login</button>
   </form>
 </body>
